--- a/Content/less/main.less
+++ b/Content/less/main.less
@@ -9,12 +9,24 @@
 @main-sticky-footer-height:            160px;
 
 // *******************
+@font-face {
+    font-family: 'Trebuchet MS';
+    src:    url('/Content/fonts/Trebuchet-MS.eot');
+    src:    url('/Content/fonts/Trebuchet-MS.eot') format('embedded-opentype'),
+        url('/Content/fonts/Trebuchet-MS.ttf') format('truetype'),
+        url('/Content/fonts/Trebuchet-MS.woff') format('woff'),
+        url('/Content/fonts/Trebuchet-MS.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
 body, html{
-    padding-top: 27px;
+    background: #fbfbfb;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
     font-size: 14px;
-    line-height: 18px;
-    font-family: 'Open Sans', sans-serif;
-    height: 100%;
+    color: #555555;
+    z-index: 1;
 }
 
 .page-wrap {
@@ -31,118 +43,20 @@ body, html{
 	height: @main-sticky-footer-height;
 }
 
-.main{
 
-    &__title{
-        font-size: 2.6rem;
-        line-height: 2.8rem;
-        color: #283142;
-        font-weight: 100;
-    }
 
-    &__list{
-        text-align: center;
+// *******************************************
+//                Header
+// *******************************************
 
-        & > li{
-            position: relative;
-            & > i{
-                display: inline-block;
-                width: @main-list-height;
-                height: @main-list-height;
-                border-radius: @main-list-height;
-                background: #fff;
-                color: #16A7DB;
-                text-align: center;
-                font-size: 50px;
-                line-height: @main-list-height;
-                box-shadow: 0 10px 40px 0 rgba(0,0,0,0.2);
-                transition: all 300ms;
-            }
+.header{
+    margin: 10px 0;
 
-            & + li{
-                &:before{
-                    content: '';
-                    position: absolute;
-                    left: -70px;
-                    top: 70px;
-                    width: 45%;
-                    height: 4px;
-                    border-radius: 10px;
-                    background: #f3f3f3;
-                }
-            }
-
-            & > p{
-                // width: 300px;
-                margin: 20px auto 0 auto;
-                color: #222222;
-                font-size: 16px;
-                line-height: 22px;
-                font-weight: 700;
-            }
-
-            &:hover > i{
-                box-shadow: 0px 20px 80px 5px rgba(0, 0, 0, 0.2);
-
-            }
-        }
-        // Element 'main__list--check'
-        &--check{
-            & > li{
-                position: relative;
-                margin-top: @main-list-ckeck-icon-height;
-                & > i{
-                    position: absolute;
-                    left: 50%;
-                    top: -40px;
-                    margin-left: -(@main-list-ckeck-icon-height / 2);
-                    width: @main-list-ckeck-icon-height;
-                    height: @main-list-ckeck-icon-height;
-                    border-radius: @main-list-ckeck-icon-height;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                    font-size: 25px;
-                    line-height: @main-list-ckeck-icon-height;
-                    color: #01b35f;
-                }
-
-                & > p{
-                    margin: 8px 0 0 0;
-                    font-size: 14px;
-                    line-height: 18px;
-                    font-weight: 700;
-                }
-
-                & > span{
-                    display: inline-block;
-                    margin-top: 10px;
-                    color: #999;
-                }
-            }
-        }
-    }
-
-}
-
-// Block 'partner'
-
-.partner{
-    position: relative;
-
-    // Element 'partner__title'
-    &__title{
-        position: absolute;
-        font-size: 90px;
-        color: #fff;
-        top: -40px;
-        text-transform: uppercase;
-        font-weight: 700;
-        z-index: 1;
-    }
-
-    // Element 'partner__title'
-    &__list{
-        position: relative;
-        z-index: 2;
+    // Element 'header__lang'
+    &__lang{
+        font-size: 80%;
+        font-style: italic;
+        color: #999;
+        border-bottom: 1px solid;
     }
 }
