--- a/Content/less/components/reset.less
+++ b/Content/less/components/reset.less
@@ -73,7 +73,7 @@ a {
     vertical-align: baseline;
     background: transparent;
     text-decoration: none;
-    color: inherit;
+    color: #034da2;
     &:hover{
         text-decoration: none;
         color: inherit;
