--- a/Content/less/components/text.less
+++ b/Content/less/components/text.less
@@ -6,6 +6,7 @@
 @text-color-green:          #49ae65;
 @text-color-red:            #EE3442;
 @text-color-blue:            #0091ca;
+@text-color-orange:         #ff9000;
 
 // ******************* Base ******************
 .text {
@@ -53,28 +54,34 @@
     // Modifiers:       `text--h*`
     // ***** h1-h6
     &--h1 {
-        font-size: 3rem;
-        line-height: 4rem;
-    }
-    &--h2 {
         font-size: 2.2rem;
         line-height: 3rem;
+        font-weight: 100;
+    }
+    &--h2 {
+        font-size: 2rem;
+        line-height: 2.6rem;
+        font-weight: 100;
     }
     &--h3 {
         font-size: 1.6rem;
         line-height: 2rem;
+        font-weight: 100;
     }
     &--h4 {
         font-size: 1.2rem;
         line-height: 2rem;
+        font-weight: 100;
     }
     &--h5 {
         font-size: 1rem;
         line-height: 1.8rem;
+        font-weight: 100;
     }
     &--h6 {
         font-size: 0.9rem;
         line-height: 1.2rem;
+        font-weight: 100;
     }
 
     // ****** Text color variation;
@@ -87,35 +94,24 @@
     &--blue{
         color: @text-color-blue !important;
     }
-}
 
-sup{
-    font-size: 50%;
-    vertical-align: top;
-    line-height: 100%;
-    font-weight: 100;
-}
+    &--orange{
+        color: @text-color-orange !important;
+    }
 
+    // ***********************
 
-///// Partion for statistic
+    &--subscribe{
+        color: @text-color-orange;
+        font-style: italic;
+        border-bottom: 1px dotted;
+        font-weight: 100;
 
-.stat{
-
-    // Modificator `stat--title-total`
-    &--title-total{
-        text-transform: uppercase;
-        font-size: 4rem;
-        line-height: 3rem;
-        color: #171717;
-        font-weight: 300;
-
-        & sup{
-            font-size: 2.5rem;
-            top: -1.2rem;
+        &:hover{
+            color: darken(@text-color-orange, 5%);
         }
     }
 }
-
 
 ///// Link
 
@@ -126,8 +122,25 @@ sup{
         text-decoration: none;
         color: inherit;
     }
+
     // Modificator `link--dashed`
     &--dashed{
         border-bottom: 1px dashed;
     }
+
+    // Modificator `link--dotted`
+    &--dotted{
+        border-bottom: 1px dotted;
+    }
+
+    // Modificator 'link--line'
+    &--line{
+        border-bottom: 1px solid;
+    }
+}
+
+p{
+    font-size: 1rem;
+    line-height: 1.4rem;
+    font-weight: 300;
 }
