--- a/Content/css/components/list.css
+++ b/Content/css/components/list.css
@@ -1,1 +1,1 @@
-.list{margin-top:20px}.list__teaser{display:inline-block;background:#fff;border-radius:3px;border:1px solid #ddd}.list__link{margin-top:10px;font-style:italic;border-bottom:1px solid;line-height:18px}.list__date{display:block;text-align:left;margin:5px 0}
+.list{margin-top:20px}.list__teaser{display:inline-block;margin-bottom:10px;background:#fff;border-radius:3px;border:1px solid #ddd}.list__link{font-style:italic;border-bottom:1px solid;line-height:18px}.list__date{display:block;text-align:left;margin:5px 0}
