--- a/Content/less/components/input.less
+++ b/Content/less/components/input.less
@@ -22,22 +22,17 @@
 // color
 @input-text-color:                         #333;
 @input-background:                         #fff;
-@input-border-color:                       #ddd;
+@input-border-color:                       #b2b2b2;
 @input-border-bottom-color:                #ddd;
 @input-border-bottom-color-active:         #FFC716;
 
 @input-search-border-color:                #dadada;
 
 // border-radius
-@input-border-radius:                      0;
-@input-border-radius--big:                 100px;
-
-// Modificator 'tags'
-@input-tags-border-color:                  #bdbdbd;
+@input-border-radius:                      3px;
 
 // ********* Label variables *******       ******
 @label-font-size:                          10px;
-@label-line-height:                        @label-font-size + 4px;
 
 // Margin
 @label-margin:                             5px;
@@ -58,49 +53,7 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     transition: all 200ms;
-
-    // &:focus{
-    //     border-bottom-color: @input-border-bottom-color-active;
-    // }
-
-    // Element 'input__group'
-    // &__group{
-    //     position: relative;
-    //
-    //     &__desc{
-    //         position: absolute;
-    //         top: 42%;
-    //         right: 10px;
-    //         transform: translateY(-50%);
-    //     }
-    //
-    //     & > [class^='icon-']{
-    //         position: absolute;
-    //         left: 10px;
-    //         top: 50%;
-    //         transform: translateY(-50%);
-    //     }
-    // }
-
-    // Modificator `input--rounded`
-    // &--rounded{
-    //     border-radius: 100px;
-    //     border-bottom: 1px solid @input-border-bottom-color;
-    // }
-
-    // Modificator 'search'
-    &--search {
-        position: relative;
-        padding: @input-padding--small @input-padding--big;
-        padding-left: (@input-padding--big*2) !important;
-        border: 1px solid @input-search-border-color;
-        border-radius: @input-border-radius--big;
-    }
-
-    // Modificator 'tags'
-    // &--tags{
-    //     border-color: @input-tags-border-color;
-    // }
+    min-width: 330px;
 
     // Modificator 'small'
     &--small{
@@ -111,41 +64,16 @@
         }
     }
 
-    // Modificator 'small'
-    &--mini{
-        padding: (@input-padding--small / 2);
-
-        &.input--search{
-            padding-left: (@input-padding--big * 2 - 5) !important;
-        }
+    // Midificator 'input--select'
+    &--select{
+        padding: @input-padding (@input-padding * 2);    
+        height: 42px;
+        font-size: 18px;
     }
 
-    // Modificator 'tags'
-    // &--select{
-    //     position: relative;
-    //     margin-bottom: @input-margin;
-    //
-    //     & > select{
-    //         cursor: pointer;
-    //         margin-bottom: 0;
-    //         padding-right: (@input-padding * 3);
-    //     }
-    //
-    //     &:after{
-    //         content: '\e5c5';
-    //         font-family: 'icomoon';
-    //         position: absolute;
-    //         right: @input-padding;
-    //         top: 50%;
-    //         font-size: 18px;
-    //         color: #5F5F5F;
-    //         transform: translateY(-50%);
-    //     }
-    // }
 }
 
 // *********** All inputs ***************
-
 // Label
 
 .label{
@@ -161,31 +89,5 @@
     // Modificator `label--rounded`
     &--rounded{
         margin-left: 10px;
-    }
-}
-
-
-/// Form__row
-// Element `form__row`
-// .form__row{
-//     & + .form__row{
-//         margin-top: 15px;
-//     }
-// }
-
-// .form__controls{
-//     margin-left: 30%;
-//     & .input{
-//         margin: 0;
-//     }
-// }
-
-.label{
-
-    // Modificator `label--form`
-    &--form{
-        width: 30%;
-        margin-top: 15px;
-        float: left;
     }
 }
