--- a/Content/less/components/list.less
+++ b/Content/less/components/list.less
@@ -19,6 +19,7 @@
     // Element 'list__teaser'
     &__teaser{
         display: inline-block;
+        margin-bottom: 10px;
         background: #fff;
         border-radius: 3px;
         border: 1px solid #ddd;
@@ -26,7 +27,6 @@
 
     // Element 'list__link'
     &__link{
-        margin-top: 10px;
         font-style: italic;
         border-bottom: 1px solid;
         line-height: 18px;
@@ -37,10 +37,5 @@
         display: block;
         text-align: left;
         margin: 5px 0;
-    }
-
-    // Element 'list__desc'
-    &__desc{
-
     }
 }
