Add style for footer

--- a/Content/less/main.less
+++ b/Content/less/main.less
@@ -89,3 +89,28 @@ body, html{
         float: right;
     }
 }
+
+
+// *******************************************
+//                Footer
+// *******************************************
+
+.footer{
+    margin-top: 40px;
+    background: #f0f0f0;
+
+    // Element 'footer__top'
+    &__top{
+        padding: 5px 0;
+        color: #fff;
+        border-radius: 4px 4px 0 0;
+        background: #023f93;
+        background: -webkit-gradient(linear, 0 0, 0 bottom, from(#023f93), to(#055cac));
+        background: -webkit-linear-gradient(#023f93, #055cac);
+        background: -moz-linear-gradient(#023f93, #055cac);
+        background: -ms-linear-gradient(#023f93, #055cac);
+        background: -o-linear-gradient(#023f93, #055cac);
+        background: linear-gradient(#023f93, #055cac);
+        -pie-background: linear-gradient(#023f93, #055cac);
+    }
+}
