--- a/Content/less/main.less
+++ b/Content/less/main.less
@@ -36,6 +36,10 @@ p{
     font-size: 16px;
     line-height: 23px;
     color: rgb(85, 85, 85);
+
+    & + p{
+        padding: 12px 0 0;
+    }
 }
 
 .page-wrap {
