--- a/Content/less/components/navbar.less
+++ b/Content/less/components/navbar.less
@@ -63,7 +63,7 @@
 
     & > li{
         display: inline-block;
-        // float: left;
+
         & > a{
             display: block;
             line-height: 44px;
@@ -75,6 +75,18 @@
             text-decoration: none;
             text-shadow: 1px 1px 1px #09508b;
             background: none;
+        }
+        &:hover{
+            & > a{
+                background: #5589c6;
+                background: -webkit-gradient(linear, 0 0, 0 bottom, from(#5589c6), to(#2775cc));
+                background: -webkit-linear-gradient(#5589c6, #2775cc);
+                background: -moz-linear-gradient(#5589c6, #2775cc);
+                background: -ms-linear-gradient(#5589c6, #2775cc);
+                background: -o-linear-gradient(#5589c6, #2775cc);
+                background: linear-gradient(#5589c6, #2775cc);
+                -pie-background: linear-gradient(#5589c6, #2775cc);
+            }
         }
     }
 }
