changes on home.html

--- a/views/home.html
+++ b/views/home.html
@@ -136,7 +136,7 @@
         <h2 class="text--h2">Каталог объектов</h2>
         <p>Для получения информации по&nbsp;нашей базе недвижимости выберите подходящий тип объекта и&nbsp;нажмите «Найти».</p>
 
-        <div>
+        <div class="margin--top">
             <select name="sources" class="input input--select" placeholder="Квартиры и комнаты">
                 <option value="profile">Квартиры и комнаты</option>
                 <option value="word">Новостройки</option>
