--- a/Content/less/components/panel.less
+++ b/Content/less/components/panel.less
@@ -65,6 +65,21 @@
         }
     }
 
+    // Modificator 'panel--blue'
+    &--filter{
+        position: relative;
+        font-size: 14px;
+        color: #5f5d55;
+        border: 1px solid #a5d0f6;
+        padding: 18px 20px 18px 18px;
+        margin-bottom: 28px;
+        background: #d6eafc;
+        background: -webkit-gradient(linear, 0 0, 0 bottom, from(#e4f1fd), to(#d4e9fc));
+        background: -moz-linear-gradient(#e4f1fd, #d4e9fc);
+        background: -o-linear-gradient(#e4f1fd, #d4e9fc);
+        -pie-background: linear-gradient(#e4f1fd, #d4e9fc);
+    }
+
     // Element 'panel__icon'
     &__icon{
         position: absolute;
