--- a/views/home.html
+++ b/views/home.html
@@ -39,7 +39,7 @@
 <div class="container container--center">
 
     <div class="panel panel--box">
-        <h1 class="text--h1">Агентство недвижимости ИНКОМ&nbsp;— крупнейшее в&nbsp;Москве</h1>
+        <h1>Агентство недвижимости ИНКОМ&nbsp;— крупнейшее в&nbsp;Москве</h1>
         <p>ИНКОМ-Недвижимость&nbsp;— агентство недвижимости, занимающее ведущие позиции на&nbsp;рынке риэлторских услуг.&nbsp;По&nbsp;оценкам экспертов, значительная часть организованных сделок в&nbsp;московском регионе приходится именно на&nbsp;«ИНКОМ», что позволяет нам вот уже многие годы занимать лидирующее место среди агентств недвижимости Москвы и&nbsp;Подмосковья.</p>
 
         <ul class="grid grid-col--1-5 text--center list">
@@ -81,7 +81,7 @@
 <div class="container container--center">
     <div class="panel panel--box panel--white">
 
-        <h3 class="text--h3">
+        <h3>
             Новости
             <a href="#" class="text--h5 text--subscribe">Подписаться</a>
         </h3>
@@ -129,11 +129,11 @@
 
 <div class="container container--center">
     <div class="panel panel--box">
-        <h2 class="text--h2">Продажа недвижимости в Москве и Подмосковье</h2>
+        <h2>Продажа недвижимости в Москве и Подмосковье</h2>
         <p>Агентство ИНКОМ-Недвижимость уже более 20 лет предоставляет риэлторские услуги юридическим и&nbsp;физическим лицам в&nbsp;ключевых сегментах рынка недвижимости: покупка и&nbsp;продажа квартир на&nbsp;первичном и&nbsp;вторичном рынках городского и&nbsp;загородного жилья, аренда квартир, а&nbsp;также проводим сделки с&nbsp;коммерческой недвижимостью. Жилая и&nbsp;коммерческая недвижимость Москвы и&nbsp;Московской области представлена в&nbsp;нашем каталоге в&nbsp;самом полном объеме, в&nbsp;наличии есть множество вариантов жилья различного типа, предоставляемого как с&nbsp;помощью риэлторов, так и&nbsp;без посредников.</p>
         <p>Мы&nbsp;оказываем риэлторские услуги по&nbsp;аренде и&nbsp;продаже недвижимости во&nbsp;всех сегментах. С&nbsp;помощью наших специалистов вы&nbsp;сможете купить элитную недвижимость в&nbsp;Москве и&nbsp;Подмосковье, а&nbsp;также приобрести жилье эконом класса. В&nbsp;нашей базе недвижимости, содержащей огромное количество предложений, найдутся как эксклюзивные квартиры, так и&nbsp;бюджетные варианты, а&nbsp;также большое количество загородного жилья всех категорий. Специалисты нашего агентства помогут в&nbsp;подборе оптимального для вас варианта и&nbsp;оформят сделку по&nbsp;<nobr>купле продаже</nobr> недвижимости максимально надежно и&nbsp;быстро!</p>
 
-        <h2 class="text--h2">Каталог объектов</h2>
+        <h2>Каталог объектов</h2>
         <p>Для получения информации по&nbsp;нашей базе недвижимости выберите подходящий тип объекта и&nbsp;нажмите «Найти».</p>
 
         <div class="margin--top">
