--- a/Content/less/components/breadcrumb.less
+++ b/Content/less/components/breadcrumb.less
@@ -24,7 +24,7 @@
  ========================================================================== */
 
 .breadcrumb{
-    margin: 20px 0 0 0;
+    margin: 20px 0 30px 0;
     padding: 0;
 
     & li{
