--- a/Content/less/components/panel.less
+++ b/Content/less/components/panel.less
@@ -78,6 +78,7 @@
         background: -moz-linear-gradient(#e4f1fd, #d4e9fc);
         background: -o-linear-gradient(#e4f1fd, #d4e9fc);
         -pie-background: linear-gradient(#e4f1fd, #d4e9fc);
+        font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     }
 
     // Element 'panel__icon'
